vote-app/result-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  strategy: {}
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - image: schoolofdevops/vote-result:latest
        name: vote-result
        resources: {}
status: {}
