vote-app/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: db
    tier: back
  name: db
  namespace: instavote
spec:
  selector:
    role: db
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
